# mkdocs-katex-ssr

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  publish.yml
configuration/: index.html
demo/: index.html
demo_cache/: index.html
docs/: .dates_cache.jsonl  configuration.md  demo.md  demo_cache.md  getting-started.md  index.md  troubleshooting.md
getting-started/: index.html
mkdocs_katex_ssr/: plugin.py  renderer.js
plans/: refactor-plan.md
search/: search_index.json
src/mkdocs_katex_ssr/: __init__.py
troubleshooting/: index.html
