[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-katex-ssr"
version = "1.0.5"
description = "A MkDocs plugin for server-side rendering of KaTeX math."
readme = "README.md"
authors = [
    {name = "RainPPR", email = "2125773894@qq.com"}
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "mkdocs>=1.1.0",
    "beautifulsoup4>=4.9.0",
]

[project.urls]
Homepage = "https://raineblog.dpdns.org/mkdocs-katex-ssr/"
Documentation = "https://raineblog.dpdns.org/mkdocs-katex-ssr/configuration/"
Repository = "https://github.com/raineblog/mkdocs-katex-ssr"
Issues = "https://github.com/raineblog/mkdocs-katex-ssr/issues"

[project.entry-points."mkdocs.plugins"]
katex-ssr = "mkdocs_katex_ssr.plugin:KatexSsrPlugin"

[tool.setuptools]
packages = ["mkdocs_katex_ssr"]

[tool.setuptools.package-data]
mkdocs_katex_ssr = ["renderer.js"]
