[project]
name = "mkdocs-katex-ssr"
version = "1.2.1"
description = "A MkDocs plugin for server-side rendering of KaTeX math."
readme = "README.md"
authors = [
    { name = "RainPPR", email = "PPR2125773894@163.com" }
]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "mkdocs==1.6.1",
    "beautifulsoup4>=4.14.3",
    "lmdb>=1.7.5",
    "cffi>=2.0.0",
]

[project.urls]
Homepage = "https://raineblog.dpdns.org/mkdocs-katex-ssr/"
Documentation = "https://raineblog.dpdns.org/mkdocs-katex-ssr/configuration/"
Repository = "https://github.com/raineblog/mkdocs-katex-ssr"
Issues = "https://github.com/raineblog/mkdocs-katex-ssr/issues"

[project.entry-points."mkdocs.plugins"]
katex-ssr = "mkdocs_katex_ssr.plugin:KatexSsrPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_katex_ssr"]

[tool.hatch.build.targets.sdist]
include = ["mkdocs_katex_ssr", "README.md", "LICENSE*"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.3",
    "pymdown-extensions>=10.21",
]
